java_library(
    name = "sanitizers",
    visibility = ["//src/main/java/com/code_intelligence/jazzer/runtime:__pkg__"],
    runtime_deps = [
        "//sanitizers/src/main/java/com/code_intelligence/jazzer/sanitizers",
    ],
)

java_library(
    name = "offline_only_sanitizers",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":sanitizers",
    ],
)
