load("@bazel_jar_jar//:jar_jar.bzl", "jar_jar")

jar_jar(
    name = "jazzer_selffuzz",
    input_jar = "//src/main/java/com/code_intelligence/jazzer:jazzer",
    rules = "selffuzz_shade_rules.jarjar",
    visibility = ["__subpackages__"],
)

jar_jar(
    name = "jazzer_api_selffuzz",
    input_jar = "//src/main/java/com/code_intelligence/jazzer/api:api",
    rules = "selffuzz_shade_rules.jarjar",
    visibility = ["__subpackages__"],
)
